poject hint name and source code link modified

--- a/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/index.html
+++ b/{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/templates/index.html
@@ -39,7 +39,7 @@
                 <h1>Cookiecutter Flask RESTful</h1>
                 <h4 class="mb-4">Using factory pattern</h4>
                 <a
-                    href="#"
+                    href="https://github.com/AndreAmorim05/cookiecutter-flask-restful"
                     class="button btn btn-primary button-primary d-md-inline-block d-block mb-md-0 mb-2 mr-md-2"
                     >source code</a
                 >
